fixed height on iphones

--- a/src/ContactForm/ContactForm.css
+++ b/src/ContactForm/ContactForm.css
@@ -6,21 +6,21 @@
 }
 .for{
     width: 100%;
-    height: fit-content;
+    height: 100%;
     border: 1px solid #00fed7;
-    padding: 4%;
+    padding: 3%;
     border-radius: 30px;
 }
-.message{
+#message{
     width: 100%;
-    height: 100%;
+    height: 10vh !important;
 }
 .MuiInputBase-colorPrimary{
 color: #fff !important;
 }
 
 .MuiInputBase-inputMultiline{
-    height: 20vh !important;
+    height: 20% !important;
 }
 .MuiFormLabel-root.Mui-focused {
     color: #00fed7 !important;
@@ -32,6 +32,7 @@ color: #fff !important;
     background: rgba(0, 0, 0, 0.5);
     color: #fff;
     border-radius: 20px !important;
+   
   }
   .MuiFormLabel-root{
     color: #00fed7 !important;
@@ -46,4 +47,5 @@ color: #fff !important;
     min-height: 50px !important;
     max-width: 90% !important;
     background: rgba(0, 0, 0, 0.5);
+    
   }
