--- a/src/components/Experiences/Experiences.css
+++ b/src/components/Experiences/Experiences.css
@@ -133,13 +133,13 @@
     background: rgba(0, 0, 0, 0.3);
     border-radius: 30px;
     margin: auto;
-    max-height: calc(85vh );
+    max-height: calc(75vh );
     scroll-snap-type: y mandatory;
     -ms-overflow-style: none;
     /* IE and Edge */
     scrollbar-width: none;
     /* Firefox */
-    overflow-y: scroll;
+    overflow-y: hidden;
   }
   .tab-panel {
     height: calc((var(--vh, 1vh) * 100) - 220px);
@@ -147,7 +147,7 @@
   .tab-panel-content {
     width: 100% !important;
     padding-top: 10px;
-    height: 100%;
+    height: 62vh !important;
     border: 1px solid #00fed7;
     border-radius: 20px;
     overflow-y: scroll;
